crates/amalgam-parser/tests/snapshots/snapshot_test__arrays_nickel.snap
---
source: crates/amalgam-parser/tests/snapshot_test.rs
expression: content
---
# Module: Arrays.v1.test.io

{
  Arrays = {
    metadata | optional | ObjectMeta,
    spec | optional | {
      configs | optional | Array {
        name | optional | String,
        value | optional | String,
      },
      items | optional | Array String,
    },
  },
}
