crates/amalgam-parser/tests/snapshots/snapshot_test__multi_version_all.snap
---
source: crates/amalgam-parser/tests/snapshot_test.rs
expression: all_versions
---
# Module: Evolving.v1alpha1.test.io

{
  Evolving = {
    spec | optional | {
      field1 | optional | String,
    },
  },
}
# Module: Evolving.v1beta1.test.io

{
  Evolving = {
    spec | optional | {
      field1 | optional | String,
      field2 | optional | Number,
    },
  },
}
# Module: Evolving.v1.test.io

{
  Evolving = {
    metadata | optional | ObjectMeta,
    spec | optional | {
      field1 | optional | String,
      field2 | optional | Number,
      field3 | optional | Bool,
    },
  },
}
