crates/amalgam-parser/tests/snapshots/snapshot_test__simple_crd_ir.snap
---
source: crates/amalgam-parser/tests/snapshot_test.rs
expression: "format!(\"{:#?}\", ir)"
---
IR {
    modules: [
        Module {
            name: "Simple.v1.test.io",
            imports: [],
            types: [
                TypeDefinition {
                    name: "Simple",
                    ty: Record {
                        fields: {
                            "metadata": Field {
                                ty: Reference {
                                    name: "ObjectMeta",
                                    module: Some(
                                        "io.k8s.apimachinery.pkg.apis.meta.v1",
                                    ),
                                },
                                required: false,
                                description: None,
                                default: None,
                            },
                            "spec": Field {
                                ty: Record {
                                    fields: {
                                        "name": Field {
                                            ty: String,
                                            required: false,
                                            description: None,
                                            default: None,
                                        },
                                    },
                                    open: false,
                                },
                                required: false,
                                description: None,
                                default: None,
                            },
                        },
                        open: false,
                    },
                    documentation: None,
                    annotations: {},
                },
            ],
            constants: [],
            metadata: Metadata {
                source_language: None,
                source_file: None,
                version: None,
                generated_at: None,
                custom: {},
            },
        },
    ],
}
