crates/amalgam-parser/tests/snapshots/snapshot_test__simple_crd_nickel.snap
---
source: crates/amalgam-parser/tests/snapshot_test.rs
expression: generated
---
# Module: Simple.v1.test.io

{
  Simple = {
    metadata | optional | ObjectMeta,
    spec | optional | {
      name | optional | String,
    },
  },
}
