crates/amalgam-parser/tests/snapshots/snapshot_test__simple_with_k8s_imports.snap
---
source: crates/amalgam-parser/tests/snapshot_test.rs
expression: content
---
# Module: test.io.v1.simple

let objectmeta = import "../../../k8s_io/v1/objectmeta.ncl" in

{
  Simple = {
    metadata | optional | objectmeta.ObjectMeta,
    spec | optional | {
      name | optional | String,
    },
  },
}
