crates/amalgam-parser/tests/snapshots/snapshot_test__validation_nickel.snap
---
source: crates/amalgam-parser/tests/snapshot_test.rs
expression: generated
---
# Module: Validated.v1.test.io

{
  Validated = {
    metadata | optional | ObjectMeta,
    spec | optional | {
      image | optional | String,
      port | Number | default = 8080,
      replicas | optional | Number,
    },
  },
}
